# feishu2acp

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/adapters/: acpx.rs  feishu.rs  mod.rs  process.rs  repository.rs  shell.rs
src/application/: command.rs  mod.rs  render.rs  service.rs
src/domain/: mod.rs
src/ports/: mod.rs
src/support/: mod.rs
todo/: nickname.md
todo/achieved/: feishu-acp-bidirectional-image-support.md
