[package]
name = "feishu2acp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
open-lark = { version = "0.14.0", default-features = false, features = ["im", "websocket"] }
path-clean = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.20"

[patch.crates-io]
lark-websocket-protobuf = { path = "vendor/lark-websocket-protobuf" }
